@@ -2,8 +2,8 @@ runtest: running logged command `output' failed
 runtest: exit status = 1
 runtest: full command line follows
 runtest: output tnlycf stderr 1
-runtest: see output.log for details
-runtest: tail of output.log follows
+runtest: see log file `output.log' for details
+runtest: tail of log follows
 
 ** Command: output 'tnlycf stderr' 1
 ** Command: echo 'stdout: tnlycf stderr'
