@@ -8,5 +8,5 @@ function _check {
 	source "$_lib" || exit 1
 
 	err="$(source_file invalid.txt "invalid file" 2>&1 | tail --lines=1)"
-	[[ "$err" == "runtest: cannot source invalid file: invalid.txt" ]]
+	[[ "$err" == "runtest: cannot source invalid file: \`invalid.txt'" ]]
 }
